Clarified question texts in grading abacus

--- a/app/views/toolbox/_grd-abacus.html.haml
+++ b/app/views/toolbox/_grd-abacus.html.haml
@@ -14,10 +14,10 @@
         = simple_link :for => "An honest attempt - even if wrong and/or incomplete?", 
         :id => "tab-honest", :href => "#pane-honest"
       %li
-        = simple_link :for => "Does it make sense - even if incomplete?",
+        = simple_link :for => "Is the line of reasoning clear, correct and easy to follow?",
         :id => "tab-cogent", :href => "#pane-cogent"
       %li
-        = simple_link :for => "Is it complete?", :id => "tab-complete",
+        = simple_link :for => "Has the line of reasoning been taken to its logical conclusion?", :id => "tab-complete",
         :href => "#pane-complete"
       %li
         = simple_link :for => "Anything else?", :id => "tab-other",
