Missing button to rotate scan added

--- a/app/views/toolbox/_grd-toolbar-btns.html.haml
+++ b/app/views/toolbox/_grd-toolbar-btns.html.haml
@@ -6,10 +6,11 @@
     = simple_button :icon => "icon-chevron-right", :tooltip => "Next Question", :id => 'btn-next-ques'
     = simple_button :icon => "icon-chevron-down", :tooltip => "Next Scan", :id => 'btn-next-scan'
   .btn-group.btn-group-vertical{ 'data-toggle' => 'buttons-radio' }
-    = simple_button :icon => "icon-leaf", :tooltip => "Fresh Copy", :id => 'btn-fresh-copy'
+    = simple_button :icon => "icon-refresh", :tooltip => "Fresh Copy", :id => 'btn-fresh-copy'
     = simple_button :icon => "icon-ok", :tooltip => "Right!", :id => 'btn-ok'
     = simple_button :icon => "icon-remove", :tooltip => "Wrong!", :id => 'btn-cross'
     = simple_button :icon => "icon-question-sign", :tooltip => "How?", :id => 'btn-what'
     = simple_button :icon => "icon-text-width", :tooltip => "Add a Comment", :id => 'btn-write'
-    = simple_button :icon => "icon-repeat", :tooltip => "Undo Last", :id => 'btn-undo'
+    = simple_button :icon => "icon-trash", :tooltip => "Undo Last", :id => 'btn-undo'
+    = simple_button :icon => "icon-repeat", :tooltip => "Flip Image", :id => 'btn-rotate'
 
