Auto-add data-toggle = tab for any <a> whose ID starts with "tab-"
This way, you wouldn't have to write toggle : tab in the YML
for every tab. The fact that the name includes tab should be enough

--- a/app/views/teachers/_deepdive.html.haml
+++ b/app/views/teachers/_deepdive.html.haml
@@ -18,7 +18,7 @@
       %ul.nav.nav-tabs.span4.purge-skip.lock
         - teacher.verticals.each do |m|
           %li{ :marker => "#{m.id}" }
-            = simple_link :for => "#{m.name}", :href => "#deepdive-topics", :id => "deepdive-#{m.id}"
+            = simple_link :for => "#{m.name}", :href => "#deepdive-topics", :id => "tab-deepdive-#{m.id}"
       .tab-content
         #deepdive-topics
 
