[edit-quiz]: Two seprate buttons for dropping selected or dropping nothing

--- a/app/views/menus/teacher/_per-qz.html.haml
+++ b/app/views/menus/teacher/_per-qz.html.haml
@@ -2,7 +2,7 @@
 %ul.dropdown-menu.dropdown-inverse#per-quiz{ :role => :menu }
   %li.nav-header= "This quiz"
   %li
-    = simple_link :for => "edit = add / remove questions", :id => 'lnk-edit-qz'
+    = simple_link :for => "add / remove questions", :id => 'lnk-edit-qz'
   %li.nav-header= "Worksheets"
   %li
     = simple_link :for => "New", :id => 'lnk-wsb-new'
