--- a/app/views/teachers/_qzb.html.haml
+++ b/app/views/teachers/_qzb.html.haml
@@ -15,16 +15,9 @@
 .tab-content
   #pane-qzb-courses.tab-pane
   #pane-qzb-topics.tab-pane
-    = render :partial => 'teachers/qzb-topics', :locals => { :teacher => teacher }
+    -#= render :partial => 'teachers/qzb-topics', :locals => { :teacher => teacher }
+    = render :partial => 'teachers/qzb-topics', :locals => { :context => :qzb }
   #pane-qzb-questions.tab-pane
-    = simple_form_for :checked, :remote => true, 
-      :html => { :id => 'form-qzb', :class => 'no-remove', 
-      'data-action' => "#{teacher_build_quiz_path}?id=:id", 'data-id' => 'tab-qzb-courses' } do |f|
-
-      .row-fluid.navbar.purge-skip
-        .input-append.pull-right.span10
-          = f.input_field :name, :class => "span8", :placeholder => "Name the Quiz"
-          %button.btn.btn-inverse{ :type => :submit }= "Build Quiz"
-      #qzb-questions.purge-blind
+    = render :partial => 'teachers/form-qzb', :locals => { :context => :qzb }
 
     
