[edit-quiz]: Ability to add questions to an existing quiz looks more like what I want it to
Upside: no change needed in core/trigger => core is behaving as expected/desired
Downside: Lots of little, seemingly unrelated changes here and there

But the big news is - now have the abilty to show pagination results within a
multi-select .tab-pane

The two requirements are contradictory. Pagination sends new data that overrides
existing data in the target (we rarely append). But multi-select requires
old data & selections to be preserved

See teacher/response.js for how this is done

--- a/app/views/teachers/_edit-qz.html.haml
+++ b/app/views/teachers/_edit-qz.html.haml
@@ -3,7 +3,8 @@
   %li
     = simple_link :for => 'Remove Ques', :href => '#pane-editqz-1', :id => 'tab-editqz-1'
   %li
-    = simple_link :for => 'Add Topics', :href => '#pane-editqz-2', :id => 'tab-editqz-2'
+    = simple_link :for => 'Add Topics', :href => '#pane-editqz-2', :id => 'tab-editqz-2',
+      :class => 'nopurge-on-show nopurge-on-inactive'
   %li
     = simple_link :for => 'Add Ques', :href => '#pane-editqz-3', :id => 'tab-editqz-3'
 
