--- a/app/views/teachers/_qzb-topics.html.haml
+++ b/app/views/teachers/_qzb-topics.html.haml
@@ -14,7 +14,7 @@
       = simple_button :icon => 'icon-ban-circle', :as => :checkbox, 
         :name => "filter[repeated]", :for => 'ignore used'
 
-  #vert-tab.tabbable.tabs-left
+  %div.tabbable.tabs-left{ :id => "#{context}-verticals-tab" }
     %ul.nav.nav-tabs.span4.purge-skip.nopurge-ever
       - Vertical.all.each do |m|
         %li{ :marker => "#{m.id}" }
