--- a/app/views/teachers/_edit-qz.html.haml
+++ b/app/views/teachers/_edit-qz.html.haml
@@ -12,7 +12,7 @@
   #pane-editqz-1.tab-pane
     = simple_form_for :checked, :remote => true, 
       :html => { :id => 'form-editqz-1', :class => 'no-remove', 
-      'data-action' => "#{quiz_trim_path}?id=:id", 'data-id' => 'tab-wsb-quizzes' } do |f|
+      'data-action' => "#{quiz_edit_path}?id=:id&op=remove", 'data-id' => 'tab-wsb-quizzes' } do |f|
 
       .row-fluid.navbar.purge-skip
         %button.btn.btn-inverse.pull-right{ :type => :submit }= "Remove Selected"
