[admin]: Added ability to add topics
Topic names can be regular text or LaTeX (within $..$)

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -75,6 +75,7 @@
               #schools.content.no-remove
             #left-X
             #left-2
+              = render :partial => "admin/mng-topics"
 
           #left-3
             = render :partial => 'examiners/tag-pending'
