--- a/app/views/mailbot/welcome_student.html.haml
+++ b/app/views/mailbot/welcome_student.html.haml
@@ -1,6 +1,9 @@
 
 %h3= "Thank you for registering with Gradians.com"
 %p
+  Congratulations on having taken this first step towards taking
+  on the Gradians Self Learning system.
+%p
   Your <b>trial account</b> has been created. You can access it using the login
   and password below
 %p
