--- a/app/views/mailbot/welcome_student.html.haml
+++ b/app/views/mailbot/welcome_student.html.haml
@@ -11,17 +11,17 @@
   <b>Password</b>: #{@account.password}
 %h4= "What next?"
 %p
-  The trial account allows you do just that. Try us free of cost so you can
+  The trial account allows you to try the system free of cost so you can
   make an informed decision about whether or not you want to purchase 
 %p 
-  When you login, you will have access to a few quizzes that we have created
-  for you. Go ahead and print out the worksheets on any of the quizzes, solve 
-  them to the best of your ability (NO ONE but you gets to see your work),
-  scan the solved answers and send them over to us using Scanbot
+  When you login, you will have access to a quizz that we have created
+  for you. Go ahead and print out the worksheet, solve it to the best of
+  your ability (NO ONE gets to see your work but you), scan the solved
+  answers and send them over to us using Scanbot
 %p
-  There is <b>no pressure</b> on anyones to force you to get the right answer.
-  The main motivation behind this work is to give you a safe space where you
-  can experience the subject as a fun mental challenge at your own pace. 
+  There is <b>no pressure</b> to get the right answer. The main motivation
+  behind this work is to give you a safe space where you can experience the
+  experience the subject as a fun mental challenge at your own pace. 
 %p
   Needless to say, we are here to help as you try gradians.com out. Write to 
   us on <b>help@gradians.com</b> with any queries that you may have 
