--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
             .navbar-inner
               %a.brand.span4{ :href => "#"}
                 = image_tag "logo-mit-beta-2.png"
-                .tagline.span6.offset3= "Grade will happen"
+                .tagline.span6.offset3= "Grades will happen"
               %ul.nav.span8.pull-right
                 -#%li
                   -#%a{ :href => "#"}= "Home"
