- Nice suggestion from Vikash w.r.t landing page, center justifies   everything so that it looks good at any zoom level

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -443,6 +443,7 @@ button[data-toggle='button'] {
   top: 0px ;
   z-index: 3 ;
   min-width: 700px ;
+  width: 1024px ;
   ul {
     margin-top: 15px ;
   }
@@ -721,3 +722,7 @@ li.split {
   height: 26px ;
 }
 
+.container-fluid {
+  width: 1024px ;
+  margin: 0 auto ;
+}
