--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -15,6 +15,10 @@ $lightblue: lighten($deep-blue, 23%) ;
 $red: #d72323 ; // rgb(215, 35, 35)
 $green: #347235 ; // rgb(87,188,32)
 
+.push-down { 
+  margin-top: 20px ;
+} 
+
 .navbar-inverse, .dropdown-menu {
   li { 
     > a { color: white ; }
@@ -178,7 +182,7 @@ $green: #347235 ; // rgb(87,188,32)
 .tab-content { 
   min-height: 500px ;
   > form { 
-    display: none ;
+    // display: none ;
     &.active { display: block ; }
   } 
 }  
