--- a/app/views/teachers/_wsb-sektions.html.haml
+++ b/app/views/teachers/_wsb-sektions.html.haml
@@ -18,6 +18,6 @@
       .btn-group
         = simple_button :icon => 'icon-wrench', :id => 'build-worksheet', :for => "Make PDF"
     = simple_form_for :checked, :url => quiz_assign_path, :remote => true,
-    :html => { :id => 'wsb-sektions', :class => 'multi-select'} do |f|
-      .tab-pane.multi-select
+    :html => { :class => 'multi-select'} do |f|
+      #wsb-sektions.tab-pane.multi-select
 
