--- a/app/views/teachers/_edit-sektion.html.haml
+++ b/app/views/teachers/_edit-sektion.html.haml
@@ -1,12 +1,12 @@
 
 #mng-sektions.tabbable.tabs-left
-  %ul.nav.nav-tabs.span3
+  %ul.nav.nav-tabs.span3.lock
     - teacher.sektions.each do |m|
       %li
         = simple_link :for => "#{m.label}", :toggle => :tab, :marker => "#{m.id}",
         :href => "#enrolled-students", :url => "sektion/students.json?id=#{m.id}&context=edit"
 
   .tab-content.span8
-    = simple_form_for :new, :url => update_sektion_path, :remote => true do |f|
+    = simple_form_for :new, :remote => true, :html => { 'data-action' => "#{update_sektion_path}?id=:id"} do |f|
       %button.btn.btn-inverse.nopurge{ :type => :submit }= "Remove Selected"
-      .tab-pane.push-down#enrolled-students
+      .tab-pane.push-down.multi-select#enrolled-students
