Pull everything to the right of branding to the right

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -58,7 +58,7 @@
               %a.brand.span3{ :href => "#"}
                 = image_tag "logo-mit-beta-2.png"
                 .tagline.span10.offset1= "Grades will happen"
-              %ul.nav.span8
+              %ul.nav.span8.pull-right
                 %li.dropdown
                   = simple_link :for => "Workbench", :as => :dropdown, :id => 'm-admin-wb'
                 %li.dropdown
