--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -33,7 +33,7 @@
               %a.brand.span3{ :href => "#"}
                 = image_tag "logo-mit-beta-2.png"
                 .tagline.span10.offset1= "Grades will happen"
-              %ul.nav.span8
+              %ul.nav.span8.pull-right
                 %li
                   = simple_link :for => "Report Cards", :id => 'lnk-st-rc'
                 %li
