--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -61,7 +61,7 @@
               %a.brand.span3{ :href => "#"}
                 = image_tag "logo-mit-beta-2.png"
                 .tagline.span10.offset1= "Grades will happen"
-              %ul.nav.span8
+              %ul.nav.span8.pull-right
                 -# dropdown -> Quiz -> [ new, edit, save ]
                 %li.dropdown
                   = simple_link :for => "Quizzes", :as => :dropdown, :id => 'm-teacher-quizzes'
