--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -10,6 +10,7 @@
     = render :partial => 'toolbox/fdb-panel'
     = render :partial => 'menus/user/account'
     = render :partial => 'menus/student/inbox'
+    = render :partial => 'menus/student/enroll'
 
 - content_for :modals do
   = render :partial => 'modals/user/account'
@@ -38,6 +39,8 @@
                   = simple_link :for => "Report Cards", :id => 'lnk-st-rc'
                 %li
                   = simple_link :for => "Inbox", :id => 'lnk-st-inbox'
+                %li.dropdown
+                  = simple_link :for => "Enroll", :as => :dropdown, :id => 'm-enroll-self'
                 %li#cp-account-link.dropdown
                   = simple_link :for => "Hello, #{student.first_name}", :as => :dropdown, :id => 'm-account'
       #desktop.row-fluid
