--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -66,7 +66,7 @@ $green: #347235 ; // rgb(87,188,32)
     }
   } 
 
-  > form { 
+  form { 
     padding: 5px ;
     input {
       background: transparent ;
@@ -754,3 +754,10 @@ li.split {
   width: 1024px ;
   margin: 0 auto ;
 }
+
+a#m-registrations + ul { 
+  > .tab-content {
+    min-height: 200px ;
+    button { margin-top: 20px ; }
+  }
+} 
