- suggestion form for teacher to upload question suggestions in any file   format - needs to go in along with web-service change to 'store_suggestions'

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -726,3 +726,10 @@ li.split {
   width: 1024px ;
   margin: 0 auto ;
 }
+
+#m-suggestion-upload {
+  li {
+   color: white ;
+   font-size: 13px ;
+  }
+}
