--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -24,6 +24,7 @@
 
 - content_for :modals do
   = render :partial => 'modals/user/account'
+  = render :partial => 'modals/teacher/suggestion'
 
 
 !!!5
