--- a/app/views/menus/teacher/_qz-main.html.haml
+++ b/app/views/menus/teacher/_qz-main.html.haml
@@ -13,6 +13,5 @@
   %li
     = simple_link :for => "Using suggestion form", :id => 'lnk-suggestion-form',
     :href => "#{server}/front-desk/teachers/#{teacher.school_id}-#{teacher.id}/petty-cash/#{teacher.id}-#{teacher.first_name}.pdf"
-
   %li
-    = simple_link :for => "Uploading a Word Document", :id => 'lnk-upload-suggestion'
+    = simple_link :for => "Uploading a Word Document", :id => 'lnk-upload-suggestion', :href => "#m-suggestion-upload"
